skeplib/tests/fixtures/parser/valid/functions_and_calls.sk
fn add(a: Int, b: Int) -> Int {
  return a + b;
}

fn main() -> Int {
  let total = add(1, 2) + add(3, 4);
  return total;
}
