skeplib/tests/fixtures/parser/invalid/function_literal_missing_arrow.sk
fn main() -> Int {
  let f: Fn(Int) -> Int = fn(x: Int) Int {
    return x + 1;
  };
  return f(1);
}
